CPP_Classes/CPP_Non-AI.h

extern "C" __declspec(dllexport)
Tracker_Basics* Tracker_Basics_Open(int trackType) {
	Tracker_Basics* cPtr = new Tracker_Basics(trackType);
	return cPtr;
}
extern "C" __declspec(dllexport)
int* Tracker_Basics_Close(Tracker_Basics* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* Tracker_Basics_Run(Tracker_Basics* cPtr, int* bgrPtr, int rows, int cols, int x, int y, int w, int h)
{
	cPtr->src = Mat(rows, cols, CV_8UC1, bgrPtr);
	Rect bbox(x, y, w, h);
	cPtr->Run(bbox);
	return (int*)&cPtr->tRect;
}
extern "C" __declspec(dllexport)
SuperPixels* SuperPixel_Open(int _width, int _height, int _num_superpixels, int _num_levels, int _prior)
{
	SuperPixels* spPtr = new SuperPixels();
	spPtr->width = _width;
	spPtr->height = _height;
	spPtr->num_superpixels = _num_superpixels;
	spPtr->num_levels = _num_levels;
	spPtr->prior = _prior;
	spPtr->seeds = ximgproc::createSuperpixelSEEDS(_width, _height, 3, _num_superpixels, _num_levels, _prior);
	spPtr->labels = Mat(spPtr->height, spPtr->width, CV_32S);
	return spPtr;
}
extern "C" __declspec(dllexport)
int* SuperPixel_Close(SuperPixels* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* SuperPixel_GetLabels(SuperPixels* cPtr)
{
	return (int*)cPtr->labels.data;
}
extern "C" __declspec(dllexport)
int* SuperPixel_Run(SuperPixels* cPtr, int* srcPtr)
{
	cPtr->src = Mat(cPtr->height, cPtr->width, CV_8UC3, srcPtr);
	cPtr->Run();
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
Vignetting_CPP* Vignetting_Open() {
	Vignetting_CPP* cPtr = new Vignetting_CPP();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* Vignetting_Close(Vignetting_CPP* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* Vignetting_RunCPP(Vignetting_CPP* cPtr, int* dataPtr, int rows, int cols, double radius, double centerX, double centerY, bool removal)
{
	cPtr->src = Mat(rows, cols, CV_8UC3, dataPtr);
	cPtr->RunCPP(radius, centerX, centerY, removal);
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
WarpModel* WarpModel_Open() {
	WarpModel* cPtr = new WarpModel();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* WarpModel_Close(WarpModel* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* WarpModel_Run(WarpModel* cPtr, int* src1Ptr, int* src2Ptr, int rows, int cols, int channels, int warpMode)
{
	Mat src1 = Mat(rows, cols, CV_8UC1, src1Ptr);
	Mat src2 = Mat(rows, cols, CV_8UC1, src2Ptr);
	cPtr->warpMode = warpMode; // don't worry - the enumerations are identical...
	cPtr->Run(src1, src2);
	return (int*)cPtr->warpMatrix.data;
}
extern "C" __declspec(dllexport)
xPhoto_OilPaint* xPhoto_OilPaint_Open()
{
	xPhoto_OilPaint* cPtr = new xPhoto_OilPaint();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* xPhoto_OilPaint_Close(xPhoto_OilPaint* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* xPhoto_OilPaint_Run(xPhoto_OilPaint* cPtr, int* imagePtr, int rows, int cols, int size, int dynRatio, int colorCode)
{
	cPtr->src = Mat(rows, cols, CV_8UC3, imagePtr);
	cPtr->Run(size, dynRatio, colorCode);
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
xPhoto_Inpaint* xPhoto_Inpaint_Open()
{
	xPhoto_Inpaint* cPtr = new xPhoto_Inpaint();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* xPhoto_Inpaint_Close(xPhoto_Inpaint* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* xPhoto_Inpaint_Run(xPhoto_Inpaint* cPtr, int* imagePtr, int* maskPtr, int rows, int cols, int iType)
{
	cPtr->src = Mat(rows, cols, CV_8UC3, imagePtr);
	cPtr->dst = Mat(rows, cols, CV_8UC3);
	Mat mask = Mat(rows, cols, CV_8UC1, maskPtr);
	cPtr->Run(mask, iType);
	return (int*)cPtr->dst.data;
}