CS_Classes/CS_Externs.cs


        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FLess_Range_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FLess_Range_Run(IntPtr cPtr, IntPtr bgrPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SuperPixel_Open(int width, int height, int num_superpixels, int num_levels, int prior);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SuperPixel_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SuperPixel_GetLabels(IntPtr spPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SuperPixel_Run(IntPtr spPtr, IntPtr bgrPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Tracker_Basics_Open(int trackType);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Tracker_Basics_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Tracker_Basics_Run(IntPtr cPtr, IntPtr bgrPtr, int rows, int cols, int x, int y, int w, int h);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Vignetting_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Vignetting_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Vignetting_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols, double radius, double centerX, double centerY, bool removeal);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr WarpModel_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr WarpModel_Close(IntPtr WarpModelPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr WarpModel_Run(IntPtr WarpModelPtr, IntPtr src1Ptr, IntPtr src2Ptr, int rows, int cols, int channels, int warpMode);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xPhoto_OilPaint_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xPhoto_OilPaint_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xPhoto_OilPaint_Run(IntPtr xPhoto_OilPaint_Ptr, IntPtr bgrPtr, int rows, int cols, int size, int dynRatio, int colorCode);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xPhoto_Inpaint_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xPhoto_Inpaint_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xPhoto_Inpaint_Run(IntPtr xPhoto_Inpaint_Ptr, IntPtr bgrPtr, IntPtr maskPtr, int rows, int cols, int iType);

    }
}
